--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
+    "mongodb": "^3.1.13",
     "pug": "^2.0.3"
   }
 }
