--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
     "express-validator": "^5.3.1",
     "mongodb": "^3.1.13",
     "mongoose": "^5.4.20",
+    "multer": "^1.4.1",
     "nodemailer": "^6.1.0",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "pug": "^2.0.3"
+  },
+  "devDependencies": {
+    "eslint-config-rallycoding": "^3.2.0"
   }
 }
